# aseprite-loader

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/assets/: enemy.aseprite
sprity-aseprite/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
sprity-aseprite-macros/: Cargo.toml
sprity-aseprite-macros/src/: lib.rs
sprity-aseprite-macros/tests/: aseprite_dir.rs
sprity-aseprite/src/: blend.rs  json.rs  lib.rs  loader.rs  main.rs
sprity-aseprite/src/binary/: blend_mode.rs  chunk.rs  chunk_type.rs  color_depth.rs  errors.rs  file.rs  frame.rs  header.rs  loader.rs  mod.rs  palette.rs  raw_file.rs  raw_frame.rs  scalars.rs
sprity-aseprite/src/binary/chunks/: cel.rs  cel_extra.rs  color_profile.rs  external_files.rs  layer.rs  mask.rs  mod.rs  old_palette.rs  palette.rs  slice.rs  tags.rs  tileset.rs  user_data.rs
sprity-aseprite/tests/: combine.aseprite  indexed.aseprite  tags.aseprite
sprity-bevy/: Cargo.toml
sprity-bevy/src/: lib.rs
sprity-cli/: Cargo.toml
sprity-cli/src/: main.rs
sprity-codegen/: Cargo.toml
sprity-codegen/src/: lib.rs
sprity-core/: Cargo.toml
sprity-core/src/: color.rs  lib.rs  loader.rs  meta.rs  palette.rs  sheet.rs
sprity-macros/: Cargo.toml
sprity-macros/src/: codegen.rs  lib.rs
sprity-macros/tests/: aseprite_dir.rs
src/: bin.rs  lib.rs  loader.rs  tests.rs
src/binary/: blend_mode.rs  chunk.rs  chunk_type.rs  color_depth.rs  errors.rs  file.rs  header.rs  image.rs  mod.rs  raw_frame.rs  scalars.rs
src/binary/chunks/: cel.rs  cel_extra.rs  color_profile.rs  external_files.rs  layer.rs  mask.rs  mod.rs  old_palette.rs  palette.rs  slice.rs  tags.rs  tileset.rs  user_data.rs
src/loader/: blend.rs  mod.rs
tests/: combine.aseprite  issue_4.aseprite  issue_4_2.aseprite  layers.aseprite  user_data.aseprite
