[package]
name = "aseprite-loader"
version = "0.1.2"
edition = "2021"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Aseprite file loader"
keywords = ["aseprite", "binary", "loader", "nom"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/aseprite-loader"
readme = "README.md"

[dependencies]
bitflags = "2"
flate2 = "1"
itertools = "0.12"
nom = "7"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
image = "0.24.7"
