[package]
name = "sprity-aseprite-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
sprity-aseprite = { path = "../sprity-aseprite" }
sprity-codegen = { path = "../sprity-codegen" }
sprity-core = { path = "../sprity-core" }
syn = "1.0.86"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
