[package]
name = "sprity-aseprite-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
sprity-aseprite = { path = "../sprity-aseprite" }
sprity-codegen = { path = "../sprity-codegen" }
sprity-core = { path = "../sprity-core" }
syn = "2"
proc-macro2 = "1"
proc-macro-error = "1"
