[package]
name = "sprity-aseprite"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
flate2 = "1"
heck = "0.4"
image = "0.24"
itertools = "0.11"
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sprity-core = { path = "../sprity-core" }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
