[package]
name = "sprity-aseprite"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Aseprite file loader"
keywords = ["sprite", "aseprite", "binary", "loader"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/sprity"
readme = "README.md"

[dependencies]
bitflags = "2"
flate2 = "1"
heck = "0.4"
image = "0.24"
itertools = "0.12"
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
