[package]
name = "sprity-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aseprite-reader = { git = "https://github.com/mdenchev/aseprite-reader" }
flate2 = "1.0.22"
heck = "0.4.0"
nom = "7.1.0"
num-derive = "0.3.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = "0.24.0"
